--- a/src/snippets/product-card.liquid
+++ b/src/snippets/product-card.liquid
@@ -1,6 +1,6 @@
 <div class="product__card">
   <a class="product-card__image">
-    {% include 'lazy-image', image: product.image %}
+    {% include 'lazy-image', image: product.featured_image %}
   </a>
   <div class="product-card__details">
     <h1 class="product-card__title">{{product.title}}</h1>
